package Gruppe18.Data;

/**
 * @author Christine
 */
public class Object {

    //3 objects: square, circle and triangle
    //se oop figurer eksempelet fra 2 semester for referanser

    public void setMaterial() {
        //set the objects material as either metal, glass or rubber
    }


}
