package Gruppe18.Data;

public class SettingsOld {

    public void addNewBackground(String localFilepath) {
        //will add user defined pictures in the background folder
    }

    public void setOrientationOfToolBar(String orientation){
        // will change the orientation of the toolbar. (default will be to the left)
    }

    public void setProrgramIcon(String pathToIcon){
        // will set the programs icon
    }



}
