package Gruppe18.Data;

/**
 * @author Vegard
 */

public final class StageCreator {

    int stageWidth;
    int stageHeight;

    public StageCreator(){}

    public int getStageWidth(){return stageWidth;}

    public int getStageHeight(){return stageHeight;}

    public void setStageWidth(int width){
        // will set the initial width of the stage
    }
    public void setStageHeigth(int height){
        // will set the initial heigth of the stage
    }


}


