package Gruppe5.Data;

public class Settings {

    public void addNewBackground(String localFilepath) {
        //will add user defined pictures in the background folder
    }

    public void setOrientationOfToolBar(String orientation){
        // will change the orientation of the toolbar. (default will be to the left)
    }


}
