@startuml

title __MARIOMAKERLIGHT's Class Diagram__\n

  namespace MyFirstGameEngine {
    namespace CharacterCreation {
      class MyFirstGameEngine.CharacterCreation.Car {
      }
    }
  }
  

  namespace MyFirstGameEngine {
    namespace CharacterCreation {
      class MyFirstGameEngine.CharacterCreation.CarBuilder {
      }
    }
  }
  

  namespace MyFirstGameEngine {
    namespace CharacterCreation {
      class MyFirstGameEngine.CharacterCreation.Enemy {
      }
    }
  }
  

  namespace MyFirstGameEngine {
    namespace CharacterCreation {
      class MyFirstGameEngine.CharacterCreation.EnemyBuilder {
      }
    }
  }
  

  namespace MyFirstGameEngine {
    namespace CharacterCreation {
      class MyFirstGameEngine.CharacterCreation.PlayerCharacter {
      }
    }
  }
  

  namespace MyFirstGameEngine {
    namespace CharacterCreation {
      class MyFirstGameEngine.CharacterCreation.PlayerCharacterBuilder {
      }
    }
  }
  

  namespace MyFirstGameEngine {
    namespace Controller {
      class MyFirstGameEngine.GamescreenController.GameScreenController {
      }
    }
  }
  

  namespace MyFirstGameEngine {
    namespace Data {
      class MyFirstGameEngine.GameControlls.Background {
      }
    }
  }
  

  namespace MyFirstGameEngine {
    namespace Data {
      class MyFirstGameEngine.GameControlls.CollissionDetection {
      }
    }
  }
  

  namespace MyFirstGameEngine {
    namespace Data {
      abstract class MyFirstGameEngine.GameControlls.GameLauncher {
      }
    }
  }
  

  namespace MyFirstGameEngine {
    namespace Data {
      abstract class MyFirstGameEngine.GameControlls.Movement {
      }
    }
  }
  

  namespace MyFirstGameEngine {
    namespace Data {
      class MyFirstGameEngine.GameControlls.Object {
      }
    }
  }
  

  namespace MyFirstGameEngine {
    namespace Data {
      class MyFirstGameEngine.GameControlls.StageBuilder {
      }
    }
  }
  

  namespace MyFirstGameEngine {
    namespace Data {
      class MyFirstGameEngine.GameControlls.StageCreator {
      }
    }
  }
  

  namespace MyFirstGameEngine {
    namespace Data {
      class MyFirstGameEngine.Settings.Settings {
      }
    }
  }
  

  namespace MyFirstGameEngine {
    namespace FileHandeling {
      abstract class MyFirstGameEngine.FileHandeling.Serializable {
      }
    }
  }
  

  namespace MyFirstGameEngine {
    class MyFirstGameEngine.UI.GameScreen {
    }
  }
  

  namespace MyFirstGameEngine {
    class Testing.TestConsole {
    }
  }
  

  namespace MyFirstGameEngine {
    namespace Settings {
      abstract class MyFirstGameEngine.Settings.SettingsOld {
      }
    }
  }
  

  namespace MyFirstGameEngine {
    namespace Settings {
      enum ToolbarOrientation {
      }
    }
  }
  

  MyFirstGameEngine.CharacterCreation.CarBuilder o-- MyFirstGameEngine.CharacterCreation.Car : car
  MyFirstGameEngine.CharacterCreation.EnemyBuilder o-- MyFirstGameEngine.CharacterCreation.Enemy : enemy
  MyFirstGameEngine.CharacterCreation.PlayerCharacterBuilder o-- MyFirstGameEngine.CharacterCreation.PlayerCharacter : pc
  MyFirstGameEngine.GamescreenController.GameScreenController .up.|> javafx.event.EventHandler
  MyFirstGameEngine.GamescreenController.GameScreenController o-- MyFirstGameEngine.CharacterCreation.PlayerCharacter : selectedPlayer
  MyFirstGameEngine.GameControlls.StageBuilder o-- MyFirstGameEngine.GameControlls.StageCreator : stageCreator
  MyFirstGameEngine.UI.GameScreen -up-|> javafx.application.Application
  MyFirstGameEngine.UI.GameScreen o-- MyFirstGameEngine.GameControlls.Background : defaultBackground


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
